--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="chapa">chapa</string>
     <string name="id_localizacao">id_localizacao</string>
     <string name="btn_map_finalizar">Finalizar</string>
+    <string name="title_activity_email_forgot">EmailForgotActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="digite_seu_email">Digite seu email</string>
+    <string name="enviar">Enviar</string>
+    <string name="voltar">voltar</string>
+    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
 </resources>
